unpackaged/main/default/objects/Notification_Center_Event__e/Notification_Center_Event__e.object-meta.xml
<CustomObject>
    <label>Notification Center Event</label>
    <pluralLabel>Notification Center Events</pluralLabel>
</CustomObject>