unpackaged/main/default/objects/Notification_Center_Event__e/fields/Change_Context__c.field-meta.xml
<CustomField>
    <fullName>Change_Context__c</fullName>
    <label>Change Context</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>